# swaybar_battery_indicator

./: Cargo.toml  README.md
src/: lib.rs
